change log

### 19.06.2017
- changed matrix transformation from einsum to dot product (a lot faster)
- added some time indicators

### 18.06.2017
- added off-diagonal occupation number calculation on runtime (handle with care, rather slow)
- removed the numpy.distutils.system_info.tmp import in entPlot, that was a mistake done far in the past

### 27.04.2017
- actually need 101 points to get the full range!!! added this partially only - work in progress (also actually need uneven points for greensfunctions to work)
- check for data points to time steps calculation - last point is not taken but first one is... so datapoints+1 will be produced
- two time green working but i think there is an time offset in there... check this!
- changed index of green function to be the acual middle one

### 26.04.2017
- started changing to general retarded two time greens function - temporarily only 100 points!
- changed initial state memory to array of N-particle system sized full state vector saves + added time stamp array
- note: always(!!!) need an even number of green function points for this to work.
- note: greensfunction can be evaluated only after time evolution has finished - so it's maybe a good idea to free memory before that

### 24.04.2017
- added option for green function plot
- added option for order of discrete time evolution. It is now in the .ini file and not in the function call.
	This is a setup for reducing the actual function calls in the run script.
- finalized time evolution for retarded Green's function

### 21.04.2017
- added retarded Green's function to the time evolution! (yay) (in progress - need to actually do time evolution and value storing)
- improved eigendecomposition function and diagonalization function to be more intelligent
- added spectral density plot option

### 20.04.2017
- finished eigenvalue and spectral function part, is obsolete because of very large dimension - keep it but do not use it!