@@ -3,6 +3,8 @@ change log
 ### 19.06.2017
 - changed matrix transformation from einsum to dot product (a lot faster)
 - added some time indicators
+- added off diagonals only and absolute value to number operator in energy basis plotting
+- fixed range of colormap in the above to be variable
 
 ### 18.06.2017
 - added off-diagonal occupation number calculation on runtime (handle with care, rather slow)
